--- a/slides.Rmd
+++ b/slides.Rmd
@@ -41,6 +41,23 @@ H. G. Wells (1903) Mankind in the Making
 - Math, reading and science
 - Data available from [http://www.oecd.org/pisa/keyfindings/pisa-2012-results.htm](http://www.oecd.org/pisa/keyfindings/pisa-2012-results.htm)
 
+
+## Procedure
+
+Measuring the difference
+
+1. Compute the mean by country and gender
+2. Difference the means: boys - girls
+
+## Confidence intervals
+
+Bootstrap is used to produce the confidence intervals
+
+1. Sample the sample, with replacement, separately by country
+2. Compute the difference
+3. Repeat 1 and 2, 1000 times
+4. Keep the 2.5 and 97.5 percentiles, to yield 95% confidence interval
+
 ---
 
 ```{r load_packages, cache=FALSE, echo = FALSE, message = FALSE, warning = FALSE, results='hide'}
@@ -272,6 +289,7 @@ ggplot(data=polys) +
   coord_equal() + theme_map + theme(legend.position="None")
 ```
 
+
 ## Climate change: What is it about carbon dioxide?
 
 \centerline{\includegraphics[width=6in]{carbon.pdf}}
@@ -407,7 +425,13 @@ ggplot(lineup(null_permute('Poll_big'), polls, n=4),
 
 ---
 
-```{r fig.align='center'}
+- Many pollsters are not operating objectively
+- News stories that lead with a poll result may not be accurately reflecting the potential vote outcome
+- This year's polls missed the mark
+
+## GOP Swing
+
+```{r fig.align='center', fig.width=12, fig.height=8}
 pres <- read_csv("data2016.csv")
 pres_smry <- pres %>% 
   filter(cand_name %in% c("Donald Trump","Hillary Clinton")) %>%
@@ -456,29 +480,59 @@ pres12_smry<-pres12_smry %>% mutate(Dempct = Dem/TOTAL.VOTES.CAST*100,
                                     Reppct = GOP/TOTAL.VOTES.CAST*100)
 
 elections<-merge(pres12_smry,pres_smry,by="FIPS.Code",suffixes=c("12","16"))
-p <- ggplot(elections, aes(x=Reppct, y=Rep16, 
+#p <- ggplot(elections, aes(x=Reppct, y=Rep16, 
+#    label=County.Name)) + #, colour=state)) +
+#  geom_point(alpha=0.5) +
+#  theme(aspect.ratio=1) + 
+#  geom_abline(intercept=0, slope=1, colour="white") + 
+#  coord_equal() + xlab("2012") + ylab("2016") + 
+#  ggtitle("GOP") + theme(legend.position="none")
+#p
+p1 <- ggplot(filter(elections, State.Postal == "WI"), 
+            aes(x=Reppct, y=Rep16-Reppct, 
     label=County.Name)) + #, colour=state)) +
+  geom_hline(yintercept=0, colour="white", size=2) + 
   geom_point(alpha=0.5) +
   theme(aspect.ratio=1) + 
-  geom_abline(intercept=0, slope=1, colour="white") + 
-  coord_equal() + xlab("2012") + ylab("2016") + 
-  ggtitle("GOP") + theme(legend.position="none")
-p
+  coord_equal() + xlab("2012") + ylab("2016-2012") + 
+  ggtitle("Wisconsin") + theme(legend.position="none")
+p2 <- ggplot(filter(elections, State.Postal == "MI"), 
+            aes(x=Reppct, y=Rep16-Reppct, 
+    label=County.Name)) + #, colour=state)) +
+  geom_hline(yintercept=0, colour="white", size=2) + 
+  geom_point(alpha=0.5) +
+  theme(aspect.ratio=1) + 
+  coord_equal() + xlab("2012") + ylab("2016-2012") + 
+  ggtitle("Michigan") + theme(legend.position="none")
+p3 <- ggplot(filter(elections, State.Postal == "IA"), 
+            aes(x=Reppct, y=Rep16-Reppct, 
+    label=County.Name)) + #, colour=state)) +
+  geom_hline(yintercept=0, colour="white", size=2) + 
+  geom_point(alpha=0.5) +
+  theme(aspect.ratio=1) + 
+  coord_equal() + xlab("2012") + ylab("2016-2012") + 
+  ggtitle("Iowa") + theme(legend.position="none")
+p4 <- ggplot(filter(elections, State.Postal == "UT"), 
+            aes(x=Reppct, y=Rep16-Reppct, 
+    label=County.Name)) + #, colour=state)) +
+  geom_hline(yintercept=0, colour="white", size=2) + 
+  geom_point(alpha=0.5) +
+  theme(aspect.ratio=1) + 
+  coord_equal() + xlab("2012") + ylab("2016-2012") + 
+  ggtitle("Utah") + theme(legend.position="none")
+grid.arrange(p1, p2, p3, p4, ncol=2)
+#library(plotly)
+#ggplotly(p4)
 #\centerline{\includegraphics[width=6in]{elections.pdf}}
 ```
-
----
-
-- Many pollsters are not operating objectively
-- News stories that lead with a poll result may not be accurately reflecting the potential vote outcome
-- This year's polls missed the mark, there was a substantial swing towards the GOP in a majority of counties across the USA
 
 ## Australian politics
 
 - First ever ROpenSci, Brisbane April 2016
-- Project [eechida](https://cran.r-project.org/web/packages/eechidna/index.html)
+- Project [eechidna](https://cran.r-project.org/web/packages/eechidna/index.html)
 - [Explore the Australian electorate by voting patterns and demographic makeup](https://vimeo.com/167367369)
 - Is the Australian electorate gerrymandered? Using permutation to assess this.
+
 
 ```{r echo=FALSE, fig.width=10, fig.height=4}
 library(eechidna)
@@ -492,6 +546,16 @@ ggplot(data=aec_abs, aes(x=Population)) + geom_dotplot(binwidth=2900) +
   facet_wrap(~PartyGp, ncol = 3) + ylab("") + xlab("Population ('000)") +
   scale_x_continuous(breaks=seq(75000, 225000, 25000), labels=seq(75, 225, 25))
 ```
+
+## Permutation procedure
+
+1. Subset to two major parties, Labor vs Coalition
+2. Scramble the party label against electorate
+3. Compute absolute value of difference in mean populations
+4. Repeat 1-3 10,000 times
+5. Plot permuted differences, mark observed data value
+
+P-value is the number of differences greater than observed data divided by number of permutations
 
 ---
 
@@ -565,11 +629,21 @@ ggplot(ped_sub, aes(x=time, y=count, colour=sensor_name)) +
   theme(legend.position="None")
 ```
 
+## Big Data day for high schoolers
+
+- Anomalous events
+- High pedestrian traffic and potential for disasters
+- Grand final day effects
+- Weekend/week day train station patterns
+- Shopping districts
+
 ## Power to the people
 
-With a laptop loaded with R you can go and do anything!
+With a laptop loaded with R, and access to open data, the world is your oyster!
 
-\vspace{2in}
+- With knowledge of randomisation (bootstrap, permutation, simulation)
+- Ability to make data plots (grammar of graphics, appropriate mapping of variables to graphical elements)
+- We can learn a lot about our world
 
 Slides and code at [https://github.com/dicook/Auckland_Teachers_Day_Nov16](https://github.com/dicook/Auckland_Teachers_Day_Nov16).
 
